scss/main.css
/*For now, this will just be a regular css-file.*/

/*CSS custom properties(variables). Source claims non-compatibility with IE and some other browsers.*/
body {
  /*Thematic colors*/

  /*For banner, buttons and some borders. Alt. 09F, 06F*/
  --theme-color: #09F;
  /*Contrast to theme color. For button background and some textboxes. Alt FF9,FC6,CC6*/
  --contrast-color: #FC6;
  --link-color: #FFF; /*Default color of links/button text and their borders*/
  --select-color: #009; /*Default button color when hovering. Alt 009, 00F*/
  --sub-bgcolor: #CCC; /*Background color for subsections*/

  /*Margins, borders, paddings*/
  --main-pad: 5px;

  /*Dimensional vars*/
  --logo-width: 160px;
  --imgtxt-offset: 200px; /*Since the height of the banner depends on the width of the logo, this needs to change if the logo size changes*/
}

/*General html objects*/
body {
  background-color: #999; /*Alt. 999,CC9*/
  margin: 5px;
}

h2 {
  margin: 5px;
}

a {
  padding: 10px;
  border: 2px solid transparent;
  border-radius: 5px;
  color: var(--link-color);
  background-color: var(--theme-color);
  text-decoration: none;
}

a:hover {
  border-color: #000;
  background-color: var(--select-color);
}

/*home page styling/*

/*banner/*
/*221117: Tested and seems ok at browser widths (450, 1360) in Chrome.*/
/*Will need to retest if the navbar (or other content) is altered.*/

#banner-wrapper {
  width: 100%
  position: fixed;
  background-color: var(--theme-color);
}

#banner {
  padding: var(--main-pad);
  display: flex;
  align-items: flex-end;
}

#banner img {
  margin-right: var(--main-pad); /*As a padding between img and the next element*/
  width: var(--logo-width);
}

/*navbar is part of the banner*/
#navbar {
  margin-left: auto;
}

#navbar ul {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

#navbar li {
  padding: 3px;
  display: inline;
  font-size: 18px;
  background-color: var(--contrast-color);
}

#navbar a {
  padding: 1px;
  color: var(--theme-color);
  background-color: transparent;
  text-decoration: underline;
}

#navbar a:hover {
  border-color: transparent;
  color: var(--select-color);
}

/*illustrasjon*/
/*221117: Tested and seems ok at browser widths (450, 1360) in Chrome.*/
/*Will need to retest if the image (or other content) is altered.*/

#illustrasjon {
  postion: relative;
}

#illustrasjon img {
  width: 100%;
}

/*Text/button to be written on top of image*/
#ill-text {
  position: absolute;
  top: var(--imgtxt-offset); /*From top of page*/
  text-align: center;
  width: 100%;
  z-index: 5; /*Didn't matter in current version (with Chrome), but leaving it in just in case*/
  color: var(--link-color); /*Change to some other var or value if necessary*/
}

#ill-text a {
  border: 2px solid var(--link-color);
  font-size: 20px;
  background-color: transparent;
}

#ill-text a:hover {
  background-color: var(--select-color);
  border-color: #000;
}

/*info*/
/*221117: Works well with sizes (450, 1360) and probably somewhat smaller ones as well.*/
#info {
  text-align: center;
}

/*options (button row)*/
/*221117: Tested and seems ok at browser widths (450, 1360) in Chrome.*/
#options {
  padding: 10px;
  display: flex;
  justify-content: space-around;
  background-color: var(--sub-bgcolor);
}

#options a {
  padding: 30px;
  border-radius: 20px;
  font-size: 40px;
}

/*Stories from users*/
/*221117: Tested and seems ok at browser widths (600, 1360) in Chrome.*/
/*For smaller widths, should try to make it single-columned.*/
#stories {
  width: 100%;
  display: grid;
  grid-template: 1fr 1fr / 1fr 1fr;
  grid-gap: 10px;
}

#stories .storybox {
  border: 2px solid var(--theme-color);
  background-color: var(--contrast-color);
}

#stories .story {
  margin: 10px;
  height: 96px;
  overflow: hidden;
  text-align: center;
  font-size: 20px;
}

#stories .storylink {
  margin-left: 5px;
  height: 44px;
  width: 160px;
  bottom: 10px;
  position: relative;
  float: left;
}

#stories .storylink a {
  padding: 5px 5px 5px 45px;
  position: absolute;
  top: 0px;
  left: 0px;
  font-size: 18px;
  line-height: 30px;
  color: var(--contrast-color);
}

#stories .polygon {
  margin-left: 5px;
  position: absolute;
  top: 6px;
  left: 0px;
  width: 32px;
  height: 32px;
  background-color: var(--contrast-color);
  clip-path: polygon(0% 75%, 0% 25%, 50% 25%, 50% 0%, 100% 50%, 50% 100%, 50% 75%);
  z-index: 10;
}

.sign {
  margin: 10px;
  text-align: right;
  font-style: italic;
}

/*footer*/
/*221117: Tested and seems ok at browser widths (450, 1360) in Chrome.*/
#footer {
  margin-top: 20px;
  border-top: 2px solid var(--theme-color);
  background-color: var(--sub-bgcolor);
}

/*#footer img {
  margin: 0 auto;
  display: block;
  text-align: center;
}not currently used*/

#footer p {
  text-align: center;
}

#footer .tlf {
  font-weight: bold;
}

/*Styling link to home page*/
.home {
  margin: 20px 0px;
  text-align: center;
}

/*User feedback styling*/
.user {
  margin-left: 20%;
  margin-right: 20%;
  padding: 10px;
  border: 2px solid var(--theme-color);
  background-color: var(--contrast-color);
}

.user img{
  width: 100%;
}

/*Dreis styles*/
/*services styling*/
#services {
  margin: 0 auto;
}

#services > .imgbox {
  margin-bottom: 10px;
}

#services img {
  border: 2px solid var(--theme-color);
  width: var(--logo-width);
  height: var(--logo-width);
  float: left;
}

#services > .imgbox > .imgtext-wrapper {
  border: 2px solid var(--theme-color);
  height: var(--logo-width);
  width: 100%;
  display: inline;
  /*padding-bottom: 10px;*/
  background-color: var(--contrast-color);
}

#services > .imgbox > .imgtext-wrapper > .imgtext {
  height: 100%;
  overflow-y: auto;
  background-color: transparent;
}

#services h4 {
  width: 100%
  display: inline;
  text-align: center;
  font-size: 18px;
  color: #333;
}

#services p {
  padding: 0px 10px;
  font-size: 16px;
  color: #000;
}

